// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Finder > API > #expand > should accept a 'sourceEvent' argument 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" role="button" draggable="false" tabindex="0" class="item expanded" aria-expanded="true">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" checked="" aria-label="Test 11">
        <div data-v-2a66825e="" class="inner-item" dragged="false" item="[object Object]" expanded="true">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 12">
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 13">
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" checked="" aria-label="Test 14">
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <div data-v-08e2b0ac="" class="list-container">
      <div data-v-af535168="" data-v-08e2b0ac="" class="list">
        <!--v-if-->
        <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
          <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 111">
          <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 111</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <div data-v-2a66825e="" class="item custom-class expanded" role="button" draggable="false" tabindex="0">
          <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 112">
          <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 112</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Finder > API > #expand > should expand the given item and emit the 'expand' event 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" role="button" draggable="false" tabindex="0" class="item expanded" aria-expanded="true">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" checked="" aria-label="Test 11">
        <div data-v-2a66825e="" class="inner-item" dragged="false" item="[object Object]" expanded="true">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 12">
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 13">
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" checked="" aria-label="Test 14">
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <div data-v-08e2b0ac="" class="list-container">
      <div data-v-af535168="" data-v-08e2b0ac="" class="list">
        <!--v-if-->
        <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
          <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 111">
          <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 111</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <div data-v-2a66825e="" class="item custom-class expanded" role="button" draggable="false" tabindex="0">
          <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 112">
          <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 112</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Finder > Drag & Drop > should match snapshot 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <div data-v-94df34d0="" data-v-af535168="" class="drop-zone">
        <!--v-if-->
      </div>
      <div data-v-2a66825e="" class="item draggable" role="button" draggable="true" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <div data-v-94df34d0="" data-v-af535168="" class="drop-zone">
        <!--v-if-->
      </div>
      <div data-v-2a66825e="" class="item draggable" role="button" draggable="true" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <div data-v-94df34d0="" data-v-af535168="" class="drop-zone">
        <!--v-if-->
      </div>
      <div data-v-2a66825e="" class="item draggable" role="button" draggable="true" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <div data-v-94df34d0="" data-v-af535168="" class="drop-zone">
        <!--v-if-->
      </div>
      <div data-v-2a66825e="" class="item draggable" role="button" draggable="true" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <div data-v-94df34d0="" data-v-af535168="" class="drop-zone last">
        <!--v-if-->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > Selection > should match snapshot 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" checked="" aria-label="Test 11">
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 12">
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" aria-label="Test 13">
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input data-v-2a66825e="" type="checkbox" checked="" aria-label="Test 14">
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > should match snapshot 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > should match snapshot with a custom arrow component 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div><span data-v-2a66825e="" theme="[object Object]" expanded="false" item="[object Object]"></span>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div><span data-v-2a66825e="" theme="[object Object]" expanded="false" item="[object Object]"></span>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div><span data-v-2a66825e="" theme="[object Object]" expanded="false" item="[object Object]"></span>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > should match snapshot with a custom item component 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if--><span data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</span>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if--><span data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</span>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if--><span data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</span>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if--><span data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</span>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > should match snapshot with an updated tree 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 31</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > should match snapshot with custom theme 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list" style="border-color: #eee; border-width: 3px;">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow" style="border-color: #555;"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow" style="border-color: #555;"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow" style="border-color: #555;"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > should match snapshot with default expanded 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item expanded" role="button" draggable="false" aria-expanded="true" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <div data-v-08e2b0ac="" class="list-container">
      <div data-v-af535168="" data-v-08e2b0ac="" class="list">
        <!--v-if-->
        <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
          <!--v-if-->
          <!--v-if-->
          <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 111</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <div data-v-2a66825e="" class="item custom-class expanded" role="button" draggable="false" tabindex="0">
          <!--v-if-->
          <!--v-if-->
          <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 112</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Finder > should match snapshot with expanded item and emit event 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" role="button" draggable="false" tabindex="0" class="item expanded" aria-expanded="true">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" dragged="false" item="[object Object]" expanded="true">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <div data-v-08e2b0ac="" class="list-container">
      <div data-v-af535168="" data-v-08e2b0ac="" class="list">
        <!--v-if-->
        <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="0">
          <!--v-if-->
          <!--v-if-->
          <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 111</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <div data-v-2a66825e="" class="item custom-class" role="button" draggable="false" tabindex="-1">
          <!--v-if-->
          <!--v-if-->
          <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 112</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Finder > should match snapshot with filter 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" expanded="false" dragged="false" item="[object Object]">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > should match snapshot with initial filter 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder > should match snapshot with no children 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <!---->
</div>
`;

exports[`Finder > should match snapshot with sort 1`] = `
<div data-v-08e2b0ac="" class="tree-container">
  <div data-v-08e2b0ac="" class="list-container">
    <div data-v-af535168="" data-v-08e2b0ac="" class="list">
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div data-v-2a66825e="" class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;
